--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul id="menu">
-        <li><a href="homepage.html" id="home">Home</a></li>
+        <li><a href="index.html" id="home">Home</a></li>
         <li><a href="" id="dashboard">Dashboard</a></li>
         <li><a href="" id="about">About</a></li>
     </ul>
