add client tracker

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <ul id="menu">
-        <li><a href="index.html" id="home">Home</a></li>
-        <li><a href="" id="dashboard">Dashboard</a></li>
-        <li><a href="" id="about">About</a></li>
-    </ul>
+    <div id="bod">
+        <ul id="menu">
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="" id="dashboard">Dashboard</a></li>
+            <li><a href="" id="about">About</a></li>
+        </ul>
+
+        <p id="tracker">0 / 0</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
