--- a/index.html
+++ b/index.html
@@ -4,22 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jimmy Zhang</title>
+    <title>jz's portfolio</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <div id="bod">
-        <ul id="menu">
-            <li><a href="index.html" id="home">Home</a></li>
-            <li><a href="" id="dashboard">Dashboard</a></li>
-            <li><a href="" id="about">About</a></li>
-        </ul>
-
-        <p id="tracker">0 / 0</p>
-    </div>
-
-    <script src="script.js"></script>
+   <script src="script.js"></script>
 </body>
 
 </html>
