--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jz's portfolio</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="inter">
+
+    <div class="left">
+        <h1 class="hi">hi, i'm jimmy</h1>
+        <ul class="sections">
+            <li><a href="">projects</a></li>
+            <li><a href="">about</a></li>
+            <li><a href="">resume</a></li>
+        </ul>
+    </div>
+
+    <div class="right">
+        <img src="./images/IMG_5776.jpg" alt="me">
+    </div>
+
    <script src="script.js"></script>
 </body>
 
