add links to sections

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jz's portfolio</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <title>about me</title>
+    <link rel="stylesheet" href="../stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -14,17 +14,11 @@
 <body class="inter">
 
     <div class="left">
-        <h1 class="hi">hi, i'm jimmy</h1>
-        <ul class="sections">
-            <li><a href="./pages/projects.html">projects</a></li>
-            <li><a href="./pages/about.html">about</a></li>
-            <li><a href="./Jimmy_s_Resume.pdf">resume</a></li>
-        </ul>
     </div>
     
     <div class="right">
-        <img src="./images/IMG_9195.jpg" alt="me">
-        <p>me n ed</p>
+        <img src="" alt="">
+        <p></p>
     </div>
 
 </body>
