create about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,11 +14,22 @@
 <body class="inter">
 
     <div class="left">
+        <h2 class="about">about me</h2>
+        <p class="about">hi, i'm jimmy. i'm a 19 year old u1 softeng student at
+             mcgill university with a passion for coding.</p>
+        <p class="perso">i love learning and expanding my coding knowledge by 
+            getting my hands busy and creating projects, which i find help me 
+            develop my skills more than anything.</p>
+        <p class="learn">my main languages are python and javascript, and i 
+            plan on gaining proficiency with react and java by the end of the 
+            w2025 semester, through classes and external learning sources.</p>
+        <p class="interest">some of my interests outside of coding include 
+            fashion, lifting, and cars.</p>
     </div>
     
     <div class="right">
-        <img src="" alt="">
-        <p></p>
+        <img src="../images/IMG_5622.jpg" alt="hiking">
+        <p>mount mansfield, vermont</p>
     </div>
 
 </body>
