--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,11 +14,16 @@
 <body class="inter">
 
     <div class="left">
+        <h2>my projects</h2>
+        <a target ="_blank" href="https://jmmyzhang.github.io/etch-a-sketch/" class="proj"><h3>etch-a-sketch</h3></a>
+        <p>javascript, html/css</p>
+        <a target ="_blank" href="https://jmmyzhang.github.io/rock-paper-scissors/" class="proj"><h3>rock paper scissors</h3></a>
+        <p>javascript, html/css</p>
     </div>
     
     <div class="right">
-        <img src="" alt="">
-        <p></p>
+        <img src="../images/IMG_4072.jpg" alt="woof">
+        <p>woof woof</p>
     </div>
 
 </body>
