--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,6 +15,8 @@
 
     <div class="left">
         <h2>my projects</h2>
+        <a target ="_blank" href="https://jmmyzhang.github.io/calculator/" class="proj"><h3>calculator (wip)</h3></a>
+        <p>javascript, html/css</p>
         <a target ="_blank" href="https://jmmyzhang.github.io/etch-a-sketch/" class="proj"><h3>etch-a-sketch</h3></a>
         <p>javascript, html/css</p>
         <a target ="_blank" href="https://jmmyzhang.github.io/rock-paper-scissors/" class="proj"><h3>rock paper scissors</h3></a>
